# travel-agent-platform

./: .env.example  .gitignore  QUICKSTART.md  pyproject.toml  start.sh  test_api.py  test_settings.py  test_travel_planning_e2e.py
apps/api/: main.py
apps/api/routes/: __init__.py  travel.py
apps/api/schemas/: travel.py
docs/: DEVELOPMENT_PLAN.md  README.md  WEB_UI_GUIDE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: TravelPlanForm.css  TravelPlanForm.jsx  TravelPlanResult.css  TravelPlanResult.jsx
frontend/src/pages/: Home.css  Home.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
